set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
cmake_minimum_required(VERSION 2.8.12)
project( FeatureTracker )
find_package(depthai CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
add_executable( feature_tracker feature_tracker.cpp )
target_link_libraries( feature_tracker ${OpenCV_LIBS} depthai::core)
