set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
cmake_minimum_required(VERSION 3.8)
project( feature_tracker )
find_package(depthai CONFIG REQUIRED)
find_package(OpenCV REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
include_directories(${ament_INCLUDE_DIRS})
add_executable( feature_tracker feature_tracker.cpp )
ament_target_dependencies(feature_tracker rclcpp std_msgs sensor_msgs)
target_link_libraries( feature_tracker ${OpenCV_LIBS} depthai::core)
ament_package()
